...
        lon = null,
        routeGeoJson = "",
        congestionJson = "[]",
        tolls = emptyList()
    )

    Page("Route & Karte", "", modifier) {
        item {
            SingleChoiceSegmentedButtonRow(Modifier.fillMaxWidth()) {
                Stage.entries.forEachIndexed { index, item ->
                    SegmentedButton(
                        selected = stage == item,
                        onClick = { stage = item },
...
